<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ListaSetorFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/TitleListaSetores"
            android:paddingLeft="5sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="end"
            android:text="@string/margem"
            android:paddingRight="5sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ListView android:layout_weight="5"
        android:layout_height="0sp"
        android:layout_width="match_parent"
        android:id="@+id/listaSetores"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnEditar"
            android:onClick="editarSetor"
            android:layout_marginLeft="5sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnRemover"
            android:onClick="removerSetor"
            android:layout_marginStart="5sp"/>
    </LinearLayout>
</LinearLayout>