<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_descricao"
        android:paddingLeft="30sp"
        android:text="@string/produto"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/item_preco"
            android:gravity="right"
            android:text="@string/hintPreço"
            android:paddingRight="10sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/item_estoque"
            android:text="@string/hintEstoque"/>
    </LinearLayout>
</LinearLayout>